# Rust_Logger

./: .gitignore  .gitmodules  Cargo.toml  README.md  install.sh  make.sh  make_root_suid.sh  template.html  upload.sh
log/: Cargo.toml  install.sh  log_installer.sh  root_suid.sh  uninstall.sh
log/src/: main.rs
log_client/: Lammps_Logger.txt  install.sh  make.sh  make_root_suid.sh
log_client/src/: command.rs  lib.rs  main.rs  user.rs
log_server/: Cargo.toml  Creating self-signed certificates.txt  MongoDb setup tricks.txt  README.md  install.sh  log_server_installer.sh  make.sh  root_suid.sh  uninstall.sh
log_server/Extra_Setup_Help/: Creating self-signed certificates.md  MongoDb setup tricks.md
log_server/src/: config.rs  connection.rs  globals.rs  lib.rs  main.rs  processor.rs
python_vis/: Mongo_Linked_List.ipynb
src/: command.rs  lib.rs  main.rs  user.rs
