[package]
name = "log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
hex = "0.4.3"
nix = "0.24.2"
rpassword = "7.0"
sha2 = "0.10.2"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
tar = "0.4.38"
