[package]
name = "log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
nix = "0.24.2"
sha2 = "0.10.2"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
tar = "0.4.38"
home = "0.5.3"
async-std = "1.12.0"
http-types = "2.12.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
rpassword = "7.0.0"
tokio = { version = "1", features = ["full"] }
utils = {path = "../utils"}