[package]
name = "tls_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
hyper = {version = "0.14.20", features = ["full"] }
rustls = "0.20.6"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.0"
rand = "0.8.5"
mongodb = "2.3.0"
async-std = "1.12.0"
home = "0.5.3"
lazy_static = "1.4.0"
flate2 = "1.0.24"
tar = "0.4.38"
chrono = "0.4.21"
bson = { version = "2.4.0",  features = ["chrono-0_4"] }
utils = {path = "../../utils"}
similar = "2.2.0"
serde_json = "1.0.83"
nix = "0.25.0"
